--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -25,10 +25,12 @@ jobs:
   terraform:
     name: Apply Terraform Code
     runs-on: ubuntu-latest
+
     defaults:
       run:
         shell: bash
         working-directory: ./terraform
+
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
@@ -38,18 +40,16 @@ jobs:
         with:
           terraform_version: 1.6.3
 
-
       - name: Terraform Init
-        id: init
-        run: terraform init -backend-config="bucket=${BUCKET_TF_STATE}"
-
+        run: |
+          terraform init \
+            -backend-config="bucket=${BUCKET_TF_STATE}" \
+            -backend-config="region=${AWS_REGION}"
 
       - name: Terraform Format
-        id: fmt
         run: terraform fmt -check
 
       - name: Terraform Validate
-        id: validate
         run: terraform validate
 
       - name: Terraform Plan
@@ -60,4 +60,3 @@ jobs:
       - name: Terraform Plan Status
         if: steps.plan.outcome == 'failure'
         run: exit 1
-
